File hierarchy error

--- a/templates/zhihu_image.html
+++ b/templates/zhihu_image.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>知乎看图</title>
-        <link rel="stylesheet" href="/static/css/uikit.gradient.css">
-        <script src="/static/js/jquery.js"></script>
-        <script src="/static/js/uikit.js"></script>
-        <link id="data-uikit-theme" rel="stylesheet" href="/static/css/uikit.docs.min.css">
+        <link rel="stylesheet" href="../static/css/uikit.gradient.css">
+        <script src="../static/js/jquery.js"></script>
+        <script src="../static/js/uikit.js"></script>
+        <link id="data-uikit-theme" rel="stylesheet" href="../static/css/uikit.docs.min.css">
     </head>
 <body>
 <div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
