--- a/templates/zhihu_image.html
+++ b/templates/zhihu_image.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>知乎看图</title>
-        <link rel="stylesheet" href="../static/src/css/uikit.gradient.css">
-        <script src="../static/src/js/jquery.js"></script>
-        <script src="../static/src/js/uikit.js"></script>
+        <link rel="stylesheet" href="http://files-10015041.file.myqcloud.com/static/src/css/uikit.gradient.css">
+        <script src="http://files-10015041.file.myqcloud.com/static/src/js/jquery.js"></script>
+        <script src="http://files-10015041.file.myqcloud.com/static/src/js/uikit.js"></script>
         <script src="http://www.getuikit.net/src/js/components/notify.js"></script>
-        <link id="data-uikit-theme" rel="stylesheet" href="../static/src/css/uikit.docs.min.css">
+        <link id="data-uikit-theme" rel="stylesheet" href="http://files-10015041.file.myqcloud.com/static/src/css/uikit.docs.min.css">
     </head>
 <body>
       <nav class="tm-navbar uk-navbar uk-navbar-attached">
