add <meta> for html

--- a/templates/zhihu_image.html
+++ b/templates/zhihu_image.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="baidu-site-verification" content="ztcXRZmYtN" />
+        <meta name="keywords" content="知乎看图" />
+        <meta name="description" content="一个查看知乎问题回答图片的网站">
         <title>知乎看图</title>
         <link rel="stylesheet" href="http://files-10015041.file.myqcloud.com/static/src/css/uikit.gradient.css">
         <script src="http://files-10015041.file.myqcloud.com/static/src/js/jquery.js"></script>
