--- a/templates/zhihu.html
+++ b/templates/zhihu.html
@@ -4,6 +4,10 @@
 {% endblock %}
 {% block mid_content %}
     <div class="uk-width-medium-1-1" xmlns="http://www.w3.org/1999/html">
+    <div class="uk-form">
+    <input type="text" placeholder="输入知乎问题或者收藏夹的完整链接" class="uk-form-width-large" id="insert_url">
+    <a onclick="insert_url();return;" class="uk-button">提交</a>
+    </div>
       <p class="uk-text-large">知乎看图</p>
       <div class="uk-gird" data-uk-grid-margin>
         <ul class="uk-subnav uk-subnav-pill" data-uk-switcher="{connect:'#switcher-content'}">
@@ -42,6 +46,22 @@
             <li aria-hidden="true" class="">
                 <div class="uk-width-medium-1-1">
                 <div class="uk-container uk-container-center" id="collection">
+                    {% for i in collection_data %}
+                        {% set index_1 = loop.index %}
+                        <div class="uk-grid" data-uk-grid-margin>
+                        <div class="uk-width-medium-1-1">
+                        <p class="uk-text-large"><a href="{{ i.url }}" target="_blank">{{ i.title }}</a></p>
+                        </div>
+                        </div>
+                        <div class="uk-grid" data-uk-grid-margin>
+                        {% for j in i.image %}
+                            {% set index_2 = loop.index %}
+                        <div class="uk-width-medium-1-5">
+                            <img src="{{ j }}">
+                        </div>
+                        {% endfor %}
+                        </div>
+                    {% endfor %}
                 </div>
                 </div>
             </li>
@@ -58,20 +78,23 @@
 {% block script %}
     <script>
     question_status = 0;
+    collection_status = 0;
     function update_item(){
         var all_li = $('.uk-subnav-pill')[0].children;
         for(var i =0;i<all_li.length;i++){
             var current_li = all_li[i];
             if(current_li.attributes['class'].value=="uk-active"){
                 if(i==0){
-                    var current_num = $('#question')[i].children.length/2;
+                    var current_num = $('#question')[0].children.length/2;
                     if(question_status==0) {
-                        UIkit.notify("加载中...", {timeout: 2000});
                         question_status =1;
                         $.ajax({
-                            url: '/index/api/get_more?type=' + i + '&start=' + current_num + '&end=' + (current_num + 5),
+                            url: '/index/api/get_more?type=1&start=' + current_num + '&end=' + (current_num + 5),
                             type: "GET",
                             success: function (data) {
+                                if(data.data.length>0){
+                                    UIkit.notify("加载中...", {timeout: 2000});
+                                }
                                 for (var j = 0; j < data.data.length; j++) {
                                     var c_data = data.data[j];
                                     var new_div = $('<div class="uk-grid" data-uk-grid-margin></div>');
@@ -95,6 +118,40 @@
                         });
                     }
                 }
+                if(i==1){
+                    var current_num = $('#collection')[0].children.length/2;
+                    if(collection_status==0) {
+                        collection_status =1;
+                        $.ajax({
+                            url: '/index/api/get_more?type=0&start=' + current_num + '&end=' + (current_num + 5),
+                            type: "GET",
+                            success: function (data) {
+                                if(data.data.length>0){
+                                    UIkit.notify("加载中...", {timeout: 2000});
+                                }
+                                for (var j = 0; j < data.data.length; j++) {
+                                    var c_data = data.data[j];
+                                    var new_div = $('<div class="uk-grid" data-uk-grid-margin></div>');
+                                    var title_div = $('<div class="uk-width-medium-1-1"></div>').append(
+                                            $('<p class="uk-text-large"></p>').append($('<a></a>').attr('href', c_data.url).text(c_data.title))
+                                    );
+                                    var image_div = $('<div class="uk-grid" data-uk-grid-margin></div>');
+                                    for (var z = 0; z < c_data.image.length; z++) {
+                                        var next_div = $('<div class="uk-width-medium-1-5"></div>').append($('<img src="' + c_data.image[z] + '">').attr('width', 250).attr('height', 100));
+                                        image_div.append(next_div);
+                                    }
+                                    $('#collection').append(title_div);
+                                    $('#collection').append(image_div);
+                                }
+                                collection_status = 0;
+                            },
+                            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                                question_status = 0;
+                                alert('服务器忙，请重试！' + errorThrown);
+                            }
+                        });
+                    }
+                }
             }
         }
 
@@ -107,6 +164,24 @@ $(window).scroll( function() {
         update_item();
     }
 });
+    function insert_url(){
+        var url = $('#insert_url').val();
+        if(url.length==0){
+            return
+        }
+        $.ajax({
+            url: '/index/api/zhihu_spider?url='+url,
+            type: "GET",
+            success: function (data) {
+                UIkit.notify(data.message, {timeout: 1500});
+                $('#insert_url').val('');
+            },
+            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                UIkit.notify("服务器忙。。。", {timeout: 1500});
+            }
+
+        });
+    }
 
     </script>
 {% endblock %}
