--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,11 @@
                     {% else %}
                     <li><a href="/index/zhihu">知乎看图</a></li>
                     {% endif %}
-{#                    {% if index == 3 %}#}
-{#                    <li class="uk-active"><a href="/index/myself">我的</a></li>#}
-{#                    {% else %}#}
-{#                    <li><a href="/index/myself">我的</a></li>#}
-{#                    {% endif %}#}
+                    {% if index == 3 %}
+                    <li class="uk-active"><a href="/index/zone">捡图</a></li>
+                    {% else %}
+                    <li><a href="/index/zone">捡图</a></li>
+                    {% endif %}
 {#                    {% if index == 4 %}#}
 {#                    <li class="uk-active"><a href="/index/help">帮助文档</a></li>#}
 {#                    {% else %}#}
@@ -83,15 +83,15 @@
                       <a href="/index/zhihu">知乎看图</a>
                   </li>
                     {% endif %}
-{#                    {% if index == 3 %}#}
-{#                    <li class="uk-active">#}
-{#                      <a href="/index/myself">我的</a>#}
-{#                  </li>#}
-{#                    {% else %}#}
-{#                  <li>#}
-{#                      <a href="/index/myself">我的</a>#}
-{#                  </li>#}
-{#                    {% endif %}#}
+                    {% if index == 3 %}
+                    <li class="uk-active">
+                      <a href="/index/zone">捡图</a>
+                  </li>
+                    {% else %}
+                  <li>
+                      <a href="/index/zone">捡图</a>
+                  </li>
+                    {% endif %}
 {#                    {% if index == 4 %}#}
 {#                    <li class="uk-active">#}
 {#                      <a href="/index/help">帮助文档</a>#}
