--- a/templates/base.html
+++ b/templates/base.html
@@ -41,11 +41,11 @@
                     {% else %}
                     <li><a href="/index/zone">捡图</a></li>
                     {% endif %}
-{#                    {% if index == 4 %}#}
-{#                    <li class="uk-active"><a href="/index/help">帮助文档</a></li>#}
-{#                    {% else %}#}
-{#                    <li><a href="/index/help">帮助文档</a></li>#}
-{#                    {% endif %}#}
+                    {% if index == 4 %}
+                    <li class="uk-active"><a href="/index/give_me_tip">打赏我</a></li>
+                    {% else %}
+                    <li><a href="/index/give_me_tip">打赏我</a></li>
+                    {% endif %}
                 </ul>
 
                 <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
@@ -92,15 +92,15 @@
                       <a href="/index/zone">捡图</a>
                   </li>
                     {% endif %}
-{#                    {% if index == 4 %}#}
-{#                    <li class="uk-active">#}
-{#                      <a href="/index/help">帮助文档</a>#}
-{#                  </li>#}
-{#                    {% else %}#}
-{#                  <li>#}
-{#                      <a href="/index/help">帮助文档</a>#}
-{#                  </li>#}
-{#                    {% endif %}#}
+                    {% if index == 4 %}
+                    <li class="uk-active">
+                      <a href="/index/give_me_tip">打赏我</a>
+                  </li>
+                    {% else %}
+                  <li>
+                      <a href="/index/give_me_tip">打赏我</a>
+                  </li>
+                    {% endif %}
 {#                    <li>#}
 {#                      <a href="/index/logout">登出</a>#}
 {#                  </li>#}
