--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,9 @@
                     {% endif %}
                 </ul>
 
-                <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas></a>
+                <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas>
+                    <i class="uk-icon-hand-o-right"></i>
+                </a>
 
                 <div class="uk-navbar-brand uk-navbar-center uk-visible-small">看图君</div>
 
